# toolchains

./: .gitignore  CMakeLists.txt  README.md  android-tc.cmake  arm-tc.cmake  hello-11.cpp  hello.c  hello.cpp
